--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -163,3 +163,8 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
 .dropdown.simple.bulkTime a{ border-radius: 100px; height: 30px;}
 
 .padding-wall{ padding: 200px 0; }
+
+.dropdown.simple.selected > a{text-align:center; background: #167f3a;}
+.dropdown.simple.bulkSelectTime{text-align:left;}
+.dropdown.simple.bulkSelectTime > a{ padding-top: 5px; padding-bottom: 5px; border-radius: 100px;}
+.activities.status{float:left;}
