--- a/app/views/shared/_bar_chart.html.erb
+++ b/app/views/shared/_bar_chart.html.erb
@@ -1,7 +1,4 @@
 <% rows_count = 10 if local_assigns[:rows_count].nil? %>
-<%# one row has a height of 40px %>
-<% row_height = 40 %>
-<% total_grid_height = rows_count * row_height %>
 <% titles = ["0-10", "11-20", "21-30", "31-40"] if local_assigns[:titles].blank? %>
 <% values = Array.new(4,0) if local_assigns[:values].blank? %>
 
@@ -21,12 +18,10 @@
   </div>
   <div class="col-md-10">
     <div class="row">
-      <% columns_count = values.length %>
-      <% columns_count.times do |index| %>
-        <div class="col-md-<%= 12 / columns_count %> apt-col">
-          <div class="grid" style="height: <%= total_grid_height %>px;">
-            <% current_col_height = values[index] * row_height / 10 %>
-            <div class="apt-bar" style="height: <%= current_col_height %>px;"></div>
+      <% values.each_with_index do |value, index| %>
+        <div class="col-md-<%= 12 / values.length %> apt-col">
+          <div class="grid">
+            <div class="apt-bar" style="height: <%= value %>%;"></div>
           </div>
           <div class="apt-x-axis text-center font-xxlarge">
             <%= titles[index] %>
