--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -69,37 +69,31 @@
   </div>
 
   <% max_kid_count = @kids_count_per_timegroup.max{|a,b| a <=> b } %>
-  <%# one row has a height of 40px %>
-  <% row_height = 40 %>
-  <% total_grid_height = max_kid_count * row_height %>
-  <div class="row apt-body">
+  <% m = max_kid_count / 10 + 1 %>
+  <% row_count = max_kid_count / m %>
+  <% row_count += 1 if row_count * m < max_kid_count %>
+  <div class="row apt-body apt-dynamic">
     <div class="col-md-1 font-xxlarge text-right apt-y-axis">
-      <% (1..max_kid_count).to_a.reverse.each do |item| %>
-        <div><%= item %></div>
+      <% (1..row_count).to_a.reverse.each do |item| %>
+        <div><%= item * m %></div>
       <% end %>
     </div>
     <% @time_intervals_and_kids.each_with_index do |item, index| %>
       <div class="col-md-2 apt-col">
-        <div class="grid" style="height: <%= total_grid_height %>px;">
-          <% current_row_height = @kids_count_per_timegroup[index] * row_height %>
-          <% if current_row_height * 2 > total_grid_height %>
-            <% tooltip_position = 'bottom' %>
-            <% tooltip_anchor = "top: #{total_grid_height - current_row_height + row_height}px;" %>
-          <% else %>
-            <% tooltip_position = 'top' %>
-            <% tooltip_anchor = "bottom: #{current_row_height}px;" %>
-          <% end %>
-          <div class="apt-bar" style="height: <%= current_row_height %>px;"></div>
-          <div class="apt-tip <%= tooltip_position %>" style="<%= tooltip_anchor %>">
-            <div class="apt-tip-content text-center">
-              <h4>Kids</h4>
-              <ul class="list-unstyled">
-                <% item[:kids].each do |kid| %>
-                  <li>
-                    <%= link_to kid.full_name, kid %>
-                  </li>
-                <% end %>
-              </ul>
+        <div class="grid">
+          <%= raw '<div class="grid-v-space"></div>' * row_count %>
+          <div class="apt-bar" style="height: <%= 100.0 * @kids_count_per_timegroup[index] / ( m * row_count ) %>%;">
+            <div class="apt-tip <%= @kids_count_per_timegroup[index] > m * row_count / 2.0 ? 'bottom' : 'top' %>">
+              <div class="apt-tip-content text-center">
+                <h4>Kids</h4>
+                <ul class="list-unstyled">
+                  <% item[:kids].each do |kid| %>
+                    <li>
+                      <%= link_to kid.full_name, kid %>
+                    </li>
+                  <% end %>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
