--- a/app/views/bubble_groups/_form.html.erb
+++ b/app/views/bubble_groups/_form.html.erb
@@ -31,62 +31,9 @@
 
         <div class="kmSection">
           <h3>Select from existing posets</h3>
-          <div class="form-group">
-            <%= f.label :full_poset_id, "Full Poset", class: "col-sm-4 control-label text-main" %>
-            <div class="col-sm-8">
-              <div class="dropdown select">
-                <% posets = Poset.all %>
-                <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="value"><%= @bubble_group.full_poset ? @bubble_group.full_poset.name : posets.first.name %></span>
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <% posets.each do |poset| %>
-                    <li><a href="javascript:" data-id="<%= poset.id %>"><%= poset.name %></a></li>
-                  <% end %>
-                </ul>
-                <%= f.hidden_field :full_poset_id, value: @bubble_group.full_poset ? @bubble_group.full_poset.id : posets.first.id %>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :forward_poset_id, "Forward Poset", class: "col-sm-4 control-label text-main" %>
-            <div class="col-sm-8">
-              <div class="dropdown select">
-                <% posets = Poset.all %>
-                <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="value"><%= @bubble_group.forward_poset ? @bubble_group.forward_poset.name : posets.first.name %></span>
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <% posets.each do |poset| %>
-                    <li><a href="javascript:" data-id="<%= poset.id %>"><%= poset.name %></a></li>
-                  <% end %>
-                </ul>
-                <%= f.hidden_field :forward_poset_id, value: @bubble_group.forward_poset ? @bubble_group.forward_poset.id : posets.first.id %>
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :backward_poset_id, "Backward Poset", class: "col-sm-4 control-label text-main" %>
-            <div class="col-sm-8">
-              <div class="dropdown select">
-                <% posets = Poset.all %>
-                <a href="javascript:" class="dropdown-toggle nowrap form-control full-width" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  <span class="value"><%= @bubble_group.backward_poset ? @bubble_group.backward_poset.name : posets.first.name %></span>
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-right">
-                  <% posets.each do |poset| %>
-                    <li><a href="javascript:" data-id="<%= poset.id %>"><%= poset.name %></a></li>
-                  <% end %>
-                </ul>
-                <%= f.hidden_field :backward_poset_id, value: @bubble_group.backward_poset ? @bubble_group.backward_poset.id : posets.first.id %>
-              </div>
-            </div>
-          </div>
+          <%= render 'posets/poset_field', f:f, type:'full' %>
+          <%= render 'posets/poset_field', f:f, type:'forward' %>
+          <%= render 'posets/poset_field', f:f, type:'backward' %>
 
           <div class="kmSection">
             <h3>Upload New Information</h3>
