#167 :: Updating bubble groups and triggers using csv

--- a/app/views/bubble_groups/_form.html.erb
+++ b/app/views/bubble_groups/_form.html.erb
@@ -41,7 +41,7 @@
               <%= f.label :bubble_file, "Upload Bubbles:", class: "col-sm-4 control-label text-main" %>
               <div class="col-sm-8">
                 <span class="form-alias"></span>
-                <%= f.file_field :bubble_game_file %>
+                <%= f.file_field :bubble_file %>
               </div>
             </div>
 
