--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="row text-center actions">
-      <%= link_to 'Cancel', users_admin_index_path, class: 'btn btn-large btn-warning btn-wide btn-simple' %>
+      <%= link_to 'Cancel', url_for(:back), class: 'btn btn-large btn-warning btn-wide btn-simple' %>
       <% if @user.persisted? %>
         <%= link_to 'Delete', users_admin_path(@user), method: :delete,  class: 'btn btn-danger btn-large btn-wide btn-simple' %>
         <%= f.submit 'Confirm', class: 'btn btn-info btn-large btn-wide btn-simple' %>
