--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,7 @@
 
 <div class="container">
   <%= form_for @user, url: @user.new_record? ? users_admin_index_path : users_admin_path, html: {class: 'form-horizontal form-classic form-vpad'} do |f| %>
+    <%= hidden_field_tag :url, url_for(:back) %>
     <%= render 'shared/error_messages', :object => @user %>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
