--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -54,7 +54,7 @@
     </div>
 
     <div class="row text-center actions">
-      <%= link_to 'Back', classrooms_path, class: 'btn btn-danger btn-large btn-wide btn-simple' %>
+      <%= link_to 'Back', url_for(:back), class: 'btn btn-danger btn-large btn-wide btn-simple' %>
       <% if @classroom.new_record? %>
         <%= f.submit 'Create Classroom', class: 'btn btn-info btn-large btn-wide btn-simple' %>
       <% else %>
