--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -139,7 +139,7 @@ table.table {width:100%;
 }
 .iFrameGames{display: inline-block; position: absolute; top: 300px;}
 .iFrameGames .btn.btn-simple.btn-warning.inactive{background-color:#ffffff; border-width: 2px; border-color: #a3a3a3; color: #a3a3a3;}
-.iframe{margin-left: 300px; display: inline-block; margin-top: 50px;}
+.iframe{margin-left: 300px; display: inline-block; margin-top: 50px;margin-bottom: 45px;}
 #game_ifrm{width: 850px; height: 850px;}
 
 .row.actions {
@@ -197,3 +197,8 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
   margin-right: -38px;
 }
 
+#wrapper{min-height:100%;margin-bottom: -45px}
+#bottomDashboard{margin-bottom: 45px;}
+.btn.btn-warning.btn-simple.btn-large.btn-wide.righty {margin-bottom: 50px;}
+.btn.btn-warning.btn-simple.btn-large.btn-wide{margin-bottom: 50px;}
+.btn.btn-warning.btn-simple.btn-large{margin-bottom: 50px;}
