--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,24 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="hidden">
-  <% if user_signed_in? %>
-   Signed in as <%= current_user.full_name %>. Not you?
-   <%= link_to "Edit profile", edit_user_registration_path %>
-   <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+<div id="wrapper">
+  <div class="hidden">
+    <% if user_signed_in? %>
+     Signed in as <%= current_user.full_name %>. Not you?
+     <%= link_to "Edit profile", edit_user_registration_path %>
+     <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, id: "flash_#{name}" %>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, id: "flash_#{name}" %>
+      <% end %>
+
     <% end %>
+  </div>
 
+  <%= render 'shared/header' %>
+  <% if user_signed_in? && !current_user.parent? %>
+    <%= render 'shared/menu' %>
   <% end %>
+  <%= yield %>
 </div>
-
-<%= render 'shared/header' %>
-<% if user_signed_in? && !current_user.parent? %>
-  <%= render 'shared/menu' %>
-<% end %>
-<%= yield %>
 <%= render 'shared/footer' %>
 
 </body>
