--- a/app/views/posets/index.html.erb
+++ b/app/views/posets/index.html.erb
@@ -27,7 +27,7 @@
     </table>
   </div>
   <div class="row actions text-right">
-    <%= link_to new_poset_path, class: 'btn btn-warning btn-simple btn-large btn-wide newPosets' do %>
+    <%= link_to new_poset_path, class: 'btn btn-warning btn-simple btn-large btn-wide' do %>
       <i class="fa fa-plus"></i>
       <span>New Posset</span>
     <% end %>
