--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -197,8 +197,4 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
   margin-right: -38px;
 }
 
-#wrapper{min-height:100%;margin-bottom: -45px}
-#bottomDashboard{margin-bottom: 45px;}
-.btn.btn-warning.btn-simple.btn-large.btn-wide.righty {margin-bottom: 50px;}
-.btn.btn-warning.btn-simple.btn-large.btn-wide{margin-bottom: 50px;}
-.btn.btn-warning.btn-simple.btn-large{margin-bottom: 50px;}
+#wrapper{min-height:100%;padding-bottom: 50px}
