--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -46,7 +46,7 @@
             <td></td>
           </tr>
           <tr>
-            <%= render 'dropdown_filter' %>
+            <%= render 'dropdown_filter', page: 'dashboard_classroom' %>
             <td>
               <%= submit_tag 'Set', class: 'btn btn-warning btn-simple' %>
             </td>
