#198 Dropdowns in activities are shifted to left and top

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -29,7 +29,7 @@
 .form-horizontal .kmSection {margin-top:35px;}
 
 .btn-simple {padding-top:5px; padding-bottom:4px; border-width:0; line-height:1em; border-radius:100px;}
-.btn-large {padding-top:10px; padding-bottom:8px; padding-left:20px; padding-right:20px;}
+.btn-large {padding-top:10px !important; padding-bottom:8px; padding-left:20px; padding-right:20px;}
 .btn-extended {padding-left:20px; padding-right:20px;}
 .btn-narrow {min-width:75px;}
 .btn-wide {min-width:150px;}
