--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -96,7 +96,7 @@
 <div class="container kmSection">
   <div class="row actions multi-row text-center">
     <div class="col-md-12">
-      <%= link_to 'Back', dashboard_classroom_path(classroom: @kid.classroom), class: 'btn btn-danger btn-simple btn-wide' %>
+      <%= link_to 'Back', url_for(:back), class: 'btn btn-danger btn-simple btn-wide' %>
       <%= link_to 'Edit', edit_kid_path(@kid), class: 'btn btn-warning btn-simple btn-wide' %>
       <%= link_to 'Reports', reports_kid_path(@kid), class: 'btn btn-info btn-simple btn-wide' %>
     </div>
