--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -14,6 +14,7 @@
 
 <%= form_for @kid, html: {class: 'form-horizontal form-classic form-vpad'} do |f| %>
   <%= render 'shared/error_messages', object: @kid %>
+  <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <% if @kid.persisted? %>
